--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "instagram",
   "version": "1.1.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "start": "webpack-dev-server",
     "build": "webpack",
